tests/error/05_type_incompatible_types.mire
load kioto

pub fn main: () {
    set x = 10
    set y = "hello"
    set z = x + y
}